[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/inventory.png" type="Texture" id=1]
[ext_resource path="res://Components/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Components/Item.tscn" type="PackedScene" id=3]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_left = -47.0
margin_top = -15.0
margin_right = 47.0
margin_bottom = 15.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="ColorRect" parent="."]
margin_left = -47.0
margin_top = -15.0
margin_right = -17.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 15, 15 )
color = Color( 0.239216, 0.552941, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" parent="Slot1" instance=ExtResource( 3 )]

[node name="Slot2" type="ColorRect" parent="."]
margin_left = -15.0
margin_top = -15.0
margin_right = 15.0
margin_bottom = 15.0
color = Color( 0.239216, 0.552941, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="ColorRect" parent="."]
margin_left = 17.0
margin_top = -15.0
margin_right = 47.0
margin_bottom = 15.0
color = Color( 0.239216, 0.552941, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
